# personal-site

./: .babelrc  .contentful.json  .eslintrc  .eslintrc.js  .gitignore  .prettierrc  CHANGELOG.md  Cargo.toml  LICENSE  README.md  gatsby-browser.js  gatsby-config.js  gatsby-node.js  gatsby-ssr.js  jest.config.js  next.config.js  package-lock.json  package.json  tailwind.config.js  test.js  tsconfig.json
.cache/: api-runner-browser-plugins.js  api-runner-ssr.js  async-requires.js  babelState.json  data.json  pages.json  redux-state.json  sync-requires.js
.netlify/: state.json
__tests__/: Layout.test.js
components/: FullscreenModal.tsx  Hamburger.tsx  Head.tsx  MainView.tsx  MobileNav.tsx  Pfp.tsx  SocialLinks.tsx
content/: home.md  me.md
functions/: addNewEmailSub.js  contact.js  getMailchimpList.js
lib/: skills.ts
pages/: 404.tsx  500.tsx  _app.tsx  index.tsx  links.tsx
public/: 0-09ffe6b3095fa3fd6f0f.js  0-09ffe6b3095fa3fd6f0f.js.map  0-389e2a34d1a811b2a233.js  0-389e2a34d1a811b2a233.js.map  0-413d8f7c4a3480671bea.js  0-413d8f7c4a3480671bea.js.map  0-e49482d6ece3daf0b820.js  0-e49482d6ece3daf0b820.js.map  1-1cc305963272a163088d.js  1-1cc305963272a163088d.js.map  1-c6311d3345e31f49fdf0.js  1-c6311d3345e31f49fdf0.js.map  1-e28264d45e32e5908651.js  1-e28264d45e32e5908651.js.map  1-fbea05f6fbd8a6cf4064.js  1-fbea05f6fbd8a6cf4064.js.map  1.76864eed6def7d01abc5.css  12-20112db970219208db87.js  12-20112db970219208db87.js.map  2-a6d34ea616e3a8b14339.js  2-a6d34ea616e3a8b14339.js.map  404.html  6-41460df1e18249a629f9.js  6-41460df1e18249a629f9.js.map  about.html  (+68 more)
(+309 files in other folders)
